# ipc_monitoring

./: .gitignore  Cargo.toml  readme.md  taskfile.yml
alerter/: Cargo.toml  taskfile.yml
alerter/src/: main.rs
common/: Cargo.toml
ipc_monitoring_layer/recipes_ipc/: ipc_monitoring.bb
ipc_monitoring_layer/recipes_ipc/files/: alerter.service  broker.service  processor.service  sensor.service
monitoring/: Cargo.toml  rustfmt.toml  taskfile.yml
monitoring/alerter/: Cargo.toml  taskfile.yml
monitoring/alerter/src/: main.rs
monitoring/broker/: Cargo.toml  taskfile.yml
monitoring/broker/src/: main.rs
monitoring/common/src/: lib.rs
monitoring/processor/: Cargo.toml  taskfile.yml
monitoring/processor/src/: main.rs
monitoring/sensor/: Cargo.toml  taskfile.yml
monitoring/sensor/src/: main.rs
processor/: Cargo.toml
processor/src/: main.rs
sensor/: Cargo.toml
sensor/src/: main.rs
yocto/ipc_monitoring_layer/conf/: layer.conf  local.conf
yocto/ipc_monitoring_layer/recipes-ipc/images/: ipc-monitoring.bb
yocto/ipc_monitoring_layer/recipes-ipc/images/files/: alerter.conf  broker.conf  broker.service  processor.conf  sensor.conf
