[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
env_logger = "0.11"
log = "0.4"
postcard = { version = "1.1.3", features = ["alloc"] }
rumqttc = "0.25.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
